--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -9,10 +9,23 @@
 \begin{document}
 \title{Poročilo pri predmetu \\
 Analiza podatkov s programom R}
-\author{Študent FMF}
+\author{Damjan Manevski}
 \maketitle
 
 \section{Izbira teme}
+
+  Tema mojega proekta je  Sistemi za souporabo koles. V njem bom obravnaval podatke, pridobljene iz ameriškega podjetja Capital Bikeshare, ki se ukvarja z izposoje koles v kratkem časovnem obdobju (podobno sistemu Bicikelj v Ljubljani). Pogledali bomo katere dejavnike vplivajo na uporabo koles (vreme, temperatura, vlaga, itn), ter kdaj se le-ti največ izposojajo (v katerih urah/mesecah).
+  
+  Cilj projekta bo določiti kako bi podjetje optimiziralo izposoje koles, pri čemer bomo upoštevali tudi število polnih/praznih postajališč, število uporabnikov v določenem obdobju in število poškodovanih koles .
+  
+  Povezave do podatkov:
+  
+1.  http://cabidashboard.ddot.dc.gov/cabidashboard/#Home
+
+2.	https://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset
+
+3.	http://www.capitalbikeshare.com/system-data
+
 
 \section{Obdelava, uvoz in čiščenje podatkov}
 
