--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -3,6 +3,8 @@
 \usepackage[slovene]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{graphicx}
+\usepackage{pdfpages}
+\usepackage{hyperref}
 
 \pagestyle{plain}
 
@@ -29,12 +31,19 @@ Analiza podatkov s programom R}
 
 \section{Obdelava, uvoz in čiščenje podatkov}
 
-\section{Analiza in vizualizacija podatkov}
+Uporabil sem 4 tabele. Tri tabele sem uvozil v CSV obliki, četrta pa iz spletne strani kot html. Preden sem jih uvozil, sem pobrisal nekatere vrstice/stolpce, ki so bili odveč.
 
-\includegraphics{../slike/povprecna_druzina.pdf}
+Z grafom sem pokazal razmerje uporaba koles v različnih dnev in se vidi da ni neke bistvene razlike v uporabo, oziroma da število uporabljenih koles se ne poveča bistveno v različnih dnev. Drugi graf pa nam ponazarja da se večinoma uporabnikov nahajajo v Washington D.C, vendar pa je podjetje prisotno tudi v nekaterih drugih občinah.
 
-\section{Napredna analiza podatkov}
+V nadaljeavnju pa bom analiziral podatke bolj podrobno, ter bom naredil še kakšen graf.
 
-\includegraphics{../slike/naselja.pdf}
+
+% \section{Analiza in vizualizacija podatkov}
+% 
+% \includegraphics{../slike/povprecna_druzina.pdf}
+% 
+% \section{Napredna analiza podatkov}
+% 
+% \includegraphics{../slike/naselja.pdf}
 
 \end{document}
