--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -22,12 +22,15 @@ Analiza podatkov s programom R}
   
   Povezave do podatkov:
   
-1.  http://cabidashboard.ddot.dc.gov/cabidashboard/#Home
+\begin{enumerate}
 
-2.	https://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset
+\item{\url{http://cabidashboard.ddot.dc.gov/cabidashboard/#Home}}
 
-3.	http://www.capitalbikeshare.com/system-data
+\item{\url{https://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset}}
 
+\item{\url{http://www.capitalbikeshare.com/system-data}}
+
+\end{enumerate}
 
 \section{Obdelava, uvoz in čiščenje podatkov}
 
@@ -37,10 +40,10 @@ Z grafom sem pokazal razmerje uporaba koles v različnih dnev in se vidi da ni n
 
 V nadaljeavnju pa bom analiziral podatke bolj podrobno, ter bom naredil še kakšen graf.
 
+\includepdf[pages={1-2}]{../slike/grafi1.pdf}
+
 
 % \section{Analiza in vizualizacija podatkov}
-% 
-% \includegraphics{../slike/povprecna_druzina.pdf}
 % 
 % \section{Napredna analiza podatkov}
 % 
