--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -36,14 +36,19 @@ Analiza podatkov s programom R}
 
 Uporabil sem 4 tabele. Tri tabele sem uvozil v CSV obliki, četrta pa iz spletne strani kot html. Preden sem jih uvozil, sem pobrisal nekatere vrstice/stolpce, ki so bili odveč.
 
-Z grafom sem pokazal razmerje uporaba koles v različnih dnev in se vidi da ni neke bistvene razlike v uporabo, oziroma da število uporabljenih koles se ne poveča bistveno v različnih dnev. Drugi graf pa nam ponazarja da se večinoma uporabnikov nahajajo v Washington D.C, vendar pa je podjetje prisotno tudi v nekaterih drugih občinah.
-
-V nadaljeavnju pa bom analiziral podatke bolj podrobno, ter bom naredil še kakšen graf.
-
-\includepdf[pages={1-2}]{../slike/grafi1.pdf}
+Z grafom sem pokazal razmerje uporaba koles v različnih dnev in se vidi da ni neke bistvene razlike v uporabo, oziroma da število uporabljenih koles se ne poveča bistveno v različnih dnev. Drugi graf pa nam ponazarja da se večinoma uporabnikov nahajajo v Washington D.C, vendar pa je podjetje prisotno tudi v nekaterih drugih občinah. Na tretjem grafu vidimo da se trend uporabe takšnih sistemov se poveča v zadnjih letih.
 
 
-% \section{Analiza in vizualizacija podatkov}
+\includepdf[pages={1-3}]{../slike/grafi1.pdf}
+
+
+\section{Analiza in vizualizacija podatkov}
+
+V tej fazi sem naredil dva zemljevida. Potrebno je bilo dodati nekaj podatkov ter očistiti začetne podatke. Na teh zemljevidov sem izpostavil Kitajska (ki je sicer nesporen lider), da bi dobil boljše zemljevide. Na drugem zemljevidu sem razdelil države v 3 skupinah (odvisno od tem koliko postajališč ima vsaka) in vidimo da to ustreza s rezultatom iz prvega zemljevida.
+\includegraphics[width=\textwidth]{../slike/zemljevid1.pdf}
+\includegraphics[width=\textwidth]{../slike/zemljevid2.pdf}
+
+
 % 
 % \section{Napredna analiza podatkov}
 % 
